--- a/Proposal/proposal/src/main/res/values/strings.xml
+++ b/Proposal/proposal/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="hint">Hint</string>
     <string name="title_activity_map_location">MapLocationActivity</string>
+    <string name="title_activity_test">test</string>
 </resources>
