--- a/Proposal/proposal/src/main/res/values-de/strings.xml
+++ b/Proposal/proposal/src/main/res/values-de/strings.xml
@@ -14,4 +14,11 @@
     <string name="hint">Hint</string>
     <string name="title_activity_map_location">MapLocationActivity</string>
     <string name="title_activity_test">test</string>
+
+    <string name="map_fragment_connection_error_message">Der Navigationsdienst konnte nicht erreicht werden. Bitte stellen Sie sicher, dass sie eine aktive Internetverbindung und Lokalisierungsdienst haben. </string>
+    <string name="map_fragment_location_reached_message">Ziel erreicht</string>
+    <string name="map_fragment_destination_title">Ziel</string>
+    <string name="map_fragment_gps_unavailable_error_message">Bitte aktivieren Sie ihren Lokalisierungsdienst, um den vollen Funktionsumfang dieser Anwendung nutzen zu können.</string>
+
+    <string name="alert_dialog_title">Bitte warten</string>
 </resources>
